# GRSimulation

./: .gitignore  CMakeLists.txt  README.md
core/: constans.h
core/GR/: camera.hpp  observer.hpp
core/GR/SpaceTime/: spaceTime.hpp
core/GR/SpaceTime/Embeddings/: SchwarzschildEmbedding.hpp
core/GR/SpaceTime/Metrices/: GRMetric.hpp  SchwarzschildMetric.hpp
core/GR/rayTracing/: ray.hpp  rayTracingFromObserver.hpp
core/classes/: camera.hpp
core/classes/SpaceTime/: spaceTime.hpp
core/kinematics/: body.hpp  physicsEngine.hpp
core/mesh/: circleMesh.h  sphereMesh.hpp
core/utils/: shader_utils.h
src/: main.cpp
src/GR/: camera.cpp  observer.cpp
src/GR/SpaceTime/: spaceTime.cpp  spaceTime.tpp
src/GR/SpaceTime/Embeddings/: SchwarzchildEmbedding.cpp
src/GR/SpaceTime/Metrices/: GRMetric.cpp  SchwarzschildMetric.cpp
src/GR/rayTracing/: ray.cpp  rayTracingFromObserver.cpp  rayTracingFromObserver.tpp
src/classes/: camera.cpp
src/classes/SpaceTime/: spaceTime.cpp
src/classes/SpaceTime/Metrices/: SchwarzschildMetric.cpp
src/kinematics/: body.cpp  body.tpp  physicsEngine.cpp  physicsEngine.tpp
src/mesh/: circleMesh.cpp  sphereMesh.cpp
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/utils/: shader_utils.cpp
